@@ -11,7 +11,6 @@
 #include        <stdio.h>
 #include        <stdlib.h>
 
-#if 0
 typedef struct foo
 {
         int     uaattrid;
@@ -30,17 +29,14 @@ int     *Upgd_minor_ID =
 
 int     *Upgd_minor_ID1 = 
         (int *) &((Upgrade_items)->uaattrid);
-#endif
 
 void
 testTortureExecute (void)
 {
-#if 0
 	if (*Upgd_minor_ID != 2)
 	  ASSERT (0);
 
 	if (*Upgd_minor_ID1 != 1)
 	  ASSERT (0);
 	return;
-#endif
 }
